# whisper-benchmark

./: .gitattributes  .gitignore  README.md  benchmark_whisper.py  download_models.py  prepare_samples.py  pyproject.toml  requirements.txt  smoke_test.py  test_benchmark.py
.github/workflows/: ci.yml
samples/: librispeech_1089_134686.attribution.txt  librispeech_1089_134686.txt  ruls_sample_8169_13240.attribution.txt  ruls_sample_8169_13240.txt
stt_benchmark/: __init__.py  cli.py
