[project]
name = "whisper-benchmark"
version = "0.1.0"
description = "Benchmark multiple Whisper backends on the same audio samples"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "mlx-whisper>=0.4.3",
    "mlx-audio>=0.4.2",
    "lightning-whisper-mlx>=0.0.10",
    "insanely-fast-whisper>=0.0.15",
    "openai-whisper>=20250625",
    "jiwer>=3.0.5",
]

[tool.uv]
package = false
